Add network dependency

--- a/mdns-alias.service
+++ b/mdns-alias.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=mDNS Alias publisher
-After=network.target avahi-daemon.service
+After=network-online.target avahi-daemon.service
+Wants=network-online.target
 
 [Service]
 User=pi
